// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`okwolo examples should correctly render the button example 1`] = `
<div class="buttons">
  <button>abc
    <span style="font-size: 6px;">0</span>
  </button>
  <button>def
    <span style="font-size: 6px;">0</span>
  </button>
  <button>ghi
    <span style="font-size: 6px;">0</span>
  </button>
</div>
`;

exports[`okwolo examples should correctly render the button example 2`] = `
<div class="buttons">
  <button>abc
    <span style="font-size: 6px;">1</span>
  </button>
  <button>def
    <span style="font-size: 6px;">0</span>
  </button>
  <button>ghi
    <span style="font-size: 6px;">0</span>
  </button>
</div>
`;

exports[`okwolo examples should correctly render the button example 3`] = `
<div class="buttons">
  <button>abc
    <span style="font-size: 6px;">1</span>
  </button>
  <button>def
    <span style="font-size: 6px;">3</span>
  </button>
  <button>ghi
    <span style="font-size: 6px;">0</span>
  </button>
</div>
`;

exports[`okwolo examples should correctly render the button example 4`] = `
<div class="buttons">
  <button>abc
    <span style="font-size: 6px;">1</span>
  </button>
  <button>def
    <span style="font-size: 6px;">1</span>
  </button>
  <button>ghi
    <span style="font-size: 6px;">0</span>
  </button>
</div>
`;

exports[`okwolo examples should correctly render the button example 5`] = `
<div class="buttons">
  <button>abc
    <span style="font-size: 6px;">1</span>
  </button>
  <button>def
    <span style="font-size: 6px;">2</span>
  </button>
  <button>ghi
    <span style="font-size: 6px;">0</span>
  </button>
</div>
`;

exports[`okwolo examples should correctly render the fruit example 1`] = `
<ul class="fruit-list">
  <li class="fruit">orange</li>
  <li class="fruit">apple</li>
  <li class="fruit">pear</li>
</ul>
`;

exports[`okwolo examples should correctly render the router example 1`] = `
<div>
  <span>title1</span>
  <span>title2</span>
  <span>title3</span>
</div>
`;

exports[`okwolo examples should correctly render the router example 2`] = `
<div>
  <button>home</button>
  <br>
  <h1>title2</h1>
  <p>content2</p>
</div>
`;

exports[`okwolo examples should correctly render the router example 3`] = `
<div>
  <span>title1</span>
  <span>title2</span>
  <span>title3</span>
</div>
`;
